--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
@@ -28,6 +29,7 @@
     "react-router-dom": "^7.7.0",
     "react-select": "^5.10.2",
     "swiper": "^11.2.10",
+    "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
