--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "jquery": "^3.7.1",
     "magnific-popup": "^1.2.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
