--- a/server/package.json
+++ b/server/package.json
@@ -15,13 +15,16 @@
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dns": "^0.2.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "googleapis": "^155.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "4.0",
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "slugify": "^1.6.6"
   }
 }
