--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,9 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.24",
     "jquery": "^3.7.1",
+    "lucide-react": "^0.545.0",
     "magnific-popup": "^1.2.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.3.1",
@@ -47,7 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.18",
     "vite": "^7.0.4"
   }
 }
